--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,13 @@ body {
   box-shadow: 2px 2px 5px rgb(0 0 0 / 25%);
   border-radius: 5px;
 }
+
+ .draggable__buttons {
+  justify-content: space-between;
+  display: flex;
+  margin-top: 1rem;
+}
+
 .column__form-error {
   margin-bottom: 0.5rem;
   margin-top: -0.5rem;
@@ -60,6 +67,7 @@ body {
   border: none;
   cursor: pointer;
   font-size: 1rem;
+  background-color: transparent;
 }
 
 .btn--link {
